<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/taskActivityId"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.tasks.TaskFormActivity"
	tools:layout_editor_absoluteY="25dp">
	
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar_task"
		android:layout_width="0dp"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<FrameLayout
		android:id="@+id/frameLayout"
		android:layout_width="0dp"
		android:layout_height="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbar_task">
		
		<ProgressBar
			android:id="@+id/progressBarTask"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="12dp"
			android:layout_gravity="top"
			android:layout_marginTop="-5dp"
			android:indeterminate="true"
			android:visibility="gone"
			tools:layout_editor_absoluteY="58dp" />
	
	
	</FrameLayout>
	
	<androidx.cardview.widget.CardView
		android:id="@+id/cardEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		app:cardElevation="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/frameLayout">
		
		
		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textInputLayTask"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="4dp">
				
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/editTaskName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/name_task"
					android:imeOptions="actionDone"
					android:inputType="text"
					android:maxLength="30" />
			
			</com.google.android.material.textfield.TextInputLayout>
		
		</androidx.appcompat.widget.LinearLayoutCompat>
	
	
	</androidx.cardview.widget.CardView>
	
	
	<androidx.cardview.widget.CardView
		android:id="@+id/cardSpinner"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		app:cardElevation="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cardEditText">
		
		
		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">
			
			<androidx.appcompat.widget.AppCompatTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="8dp"
				android:text="@string/status_da_tarefa"
				android:textColor="@android:color/background_dark"
				android:textStyle="bold" />
			
			<androidx.appcompat.widget.AppCompatSpinner
				android:id="@+id/spinnerStatusTask"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		
		</androidx.appcompat.widget.LinearLayoutCompat>
	
	</androidx.cardview.widget.CardView>
	
	
	<androidx.cardview.widget.CardView
		android:id="@+id/card_view"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		app:cardElevation="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cardSpinner">
		
		<androidx.appcompat.widget.LinearLayoutCompat
			android:id="@+id/linearLayPriority"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/appCompatTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="8dp"
				android:paddingBottom="4dp"
				android:text="@string/priority"
				android:textColor="@android:color/background_dark"
				android:textStyle="bold" />
			
			<androidx.appcompat.widget.LinearLayoutCompat
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal">
				
				
				<RadioGroup
					android:id="@+id/radioGroupPriority"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:orientation="horizontal">
					
					<RadioButton
						android:id="@+id/radionBtnHigh"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="4dp"
						android:padding="4dp"
						android:text="@string/high" />
					
					<RadioButton
						android:id="@+id/radionBtnAverage"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="4dp"
						android:padding="4dp"
						android:text="@string/average" />
					
					<RadioButton
						android:id="@+id/radionBtnLow"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="4dp"
						android:padding="4dp"
						android:text="@string/low" />
				
				</RadioGroup>
			
			
			</androidx.appcompat.widget.LinearLayoutCompat>
		
		
		</androidx.appcompat.widget.LinearLayoutCompat>
	
	
	</androidx.cardview.widget.CardView>
	
	
	<androidx.cardview.widget.CardView
		android:id="@+id/cardStartDate"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		app:cardElevation="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/card_view">
		
		
		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textInputLayStartDate"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="4dp">
				
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/editStartDate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:hint="@string/start_date"
					android:imeOptions="actionDone"
					android:inputType="number"
					android:maxLength="10"
					android:maxLines="1" />
			
			</com.google.android.material.textfield.TextInputLayout>
		
		</androidx.appcompat.widget.LinearLayoutCompat>
	
	
	</androidx.cardview.widget.CardView>
	
	
	<androidx.cardview.widget.CardView
		android:id="@+id/cardEndDate"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		app:cardElevation="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cardStartDate">
		
		
		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textInputLayEndDate"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="4dp">
				
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/editEndDate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:hint="@string/date_conclusion"
					android:imeOptions="actionDone"
					android:inputType="number"
					android:maxLength="10"
					android:maxLines="1" />
			
			</com.google.android.material.textfield.TextInputLayout>
		
		</androidx.appcompat.widget.LinearLayoutCompat>
	
	
	</androidx.cardview.widget.CardView>

	<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btnCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:text="CANCELAR"
			app:layout_constraintEnd_toStartOf="@+id/btnSaveTask"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/cardEndDate"/>
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/btnSaveTask"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:layout_marginEnd="16dp"
		android:text="SALVAR"
		app:layout_constraintBaseline_toBaselineOf="@+id/btnCancel"
		app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>