<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="8dp"
	android:layout_marginTop="8dp"
	android:layout_marginRight="8dp"
	android:layout_marginBottom="8dp"
	android:orientation="vertical"
	app:cardCornerRadius="8dp"
	app:cardElevation="8dp"
	app:cardUseCompatPadding="false">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/constraintLayTask"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="visible">

		<TextView
				android:id="@+id/labelTextTask"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="14dp"
				android:text="@string/name_task_text"
				android:textStyle="bold"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

		<TextView
				android:id="@+id/textTaskName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="12dp"
				android:text="@string/name_task_text"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/labelTextTask" />

		<TextView
				android:id="@+id/textPriority"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="11dp"
				android:text="@string/priority_text"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/labelTextPriority" />

		<TextView
				android:id="@+id/labelTextPriority"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="9dp"
				android:text="@string/priority_text"
				android:textStyle="bold"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textProgress" />

		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/textProgress"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="6dp"
				android:text="@string/progress_task_text"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/labelTextProgress" />

		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/labelTextProgress"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="7dp"
				android:text="@string/progress_task_text"
				android:textStyle="bold"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textTaskName" />

		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/textStartDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="10dp"
				android:text="@string/start_date_text"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/labelTextStartDate" />

		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/labelTextStartDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="10dp"
				android:text="@string/start_date_text"
				android:textStyle="bold"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textPriority" />

		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/textEndDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="9dp"
				android:text="@string/end_date_text"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/labelTextEndDate" />

		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/labelTextEndDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="7dp"
				android:text="@string/end_date_text"
				android:textStyle="bold"
				android:visibility="visible"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textStartDate" />

		<androidx.appcompat.widget.AppCompatImageButton
				android:id="@+id/btnDeleteTask"
				style="@style/Widget.AppCompat.Button.Borderless"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="16dp"
				android:layout_marginBottom="8dp"
				android:src="@drawable/ic_delete"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/btnEditTask"
				app:layout_constraintHorizontal_chainStyle="spread_inside"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textEndDate"
				app:layout_constraintVertical_bias="0.0" />

		<androidx.appcompat.widget.AppCompatImageButton
				android:id="@+id/btnEditTask"
				style="@style/Widget.AppCompat.Button.Borderless"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="8dp"
				android:src="@drawable/ic_edit"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.898"
				app:layout_constraintStart_toEndOf="@+id/btnDeleteTask"
				app:layout_constraintTop_toBottomOf="@+id/textEndDate"
				app:layout_constraintVertical_bias="0.0" />


	</androidx.constraintlayout.widget.ConstraintLayout>


	<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/constraintLayNot"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:visibility="gone">

		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/textNenhumaTarefa"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="8dp"
				android:padding="8dp"
				android:text="@string/nothing_task"
				android:textAlignment="center"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />


	</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>